# mindrian-agno-V1-171225

./: .env.example  .gitignore  HANDOFF_ARCHITECTURE.md  README.md  demo.py  mcp_servers.json  playground.py  pws_all_chunks.json  pyproject.toml  render.yaml  requirements.txt
api/: __init__.py  main.py
api/routes/: __init__.py  ai.py  chat.py  chat_v4.py  health.py  opportunities.py
data/: pws_chunks.json
docs/: AGENT_ONTOLOGY.md  AGNO_V2_MIGRATION_GUIDE.md  ARCHITECTURE.md  BANK_OF_OPPORTUNITIES.md  DEPLOYMENT.md  GEMINI_DEEP_RESEARCH_INTEGRATION.md  IMPLEMENTATION_ROADMAP.md  LARRY_SYSTEM_PROMPT_SPEC.md  LLM_ENGINE.md  META_PROMPT_FOR_SYSTEM_DESIGN.md  SWARM_ARCHITECT_SKILL_PLAN.md  SWARM_MANAGER_SPECS.md  SYNCFUSION_AI_INTEGRATION.md  UI_STRATEGY.md
examples/: pws_brain_demo.py
mindrian/: __init__.py
mindrian/agents/: __init__.py  base.py
mindrian/agents/conversational/: __init__.py  devil.py  larry.py
mindrian/agents/frameworks/: __init__.py
mindrian/agents/frameworks/scenario_analysis/: __init__.py  agent.py
mindrian/agents/research/: __init__.py  beautiful_question.py  csio.py  domain_analysis.py  gemini_deep_research.py
mindrian/agents/research/reverse_salient/: __init__.py  agent.py  tools.py
mindrian/builder/: AGENT_BUILDER_SPEC.md  __init__.py  agent_builder.py  phases.py  schema.py
mindrian/config/: __init__.py  settings.py
mindrian/graphrag/: __init__.py  hybrid_retriever.py  neo4j_client.py  pinecone_client.py  tools.py
mindrian/handoff/: __init__.py  context.py  manager.py  tools.py  types.py
mindrian/prompts/: __init__.py  larry_system_prompt.py  larry_system_prompt_v4.py
mindrian/registry/: __init__.py  agent_registry.py  mcp_manager.py  skill_loader.py
mindrian/services/: __init__.py  opportunity_bank.py
mindrian/state/: __init__.py
mindrian/teams/: __init__.py  deep_dive_team.py  deep_research_team.py  team_definitions.py  team_registry.py
mindrian/tools/: __init__.py  google_patents.py  neo4j_tools.py  pinecone_pws_brain.py  pinecone_tools.py  pws_brain.py  pws_brain_pinecone.py
mindrian/workflow/: __init__.py  orchestrator.py  router.py
scripts/: README_INGESTION.md  example_graphrag_agent.py  ingest_all_pws_content.py  ingest_neo4j_to_pinecone.py  ingest_pws_lectures.py  ingest_pws_lectures_to_graphrag.py  ingest_reverse_salient.py  pws_brain_ingestion.py  pws_content_template.py  run_larry_graphrag.py  test_graphrag.py
scripts/reverse_salient/: clean_documents.py  compute_bert.py  compute_lsa.py  detect_reverse_salients.py  visualize_results.py
tests/: __init__.py  test_registry.py
